# immigration-Aiagent-

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  check_git_status.py  pyproject.toml  run_output.txt  test_env.py  vps_check.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  __init__.py  admin_cli.py  api_server.py  bot.py  config.py  db.py  deploy.sh  llm_client.py  rate_limiter.py  requirements.txt
frontend/: .env.example  README.md  index.html  init.js  package-lock.json  package.json  tailwind.config.js
frontend/docs/: architecture.md  installation.md  progress.md  setup.md  technical_implementation.md  testing.md
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  Layout.jsx  LoginForm.jsx  PaymentPage.jsx  PaywallModal.jsx  RegistrationForm.jsx  SuccessPage.jsx
loopedai-bot/: .env.example  admin_register.py  loopedai_auth.py  loopedai_bot.py
scripts/: __init__.py  lint.py
src/: __init__.py  main.py  utils.py
src/agents/: __init__.py  application_guide_agent.py  compliance_agent.py  immigration_research_agent.py  intake_agent.py  lawyer_match_agent.py  plain_language_agent.py  response_agent.py
src/api/: api_server.py
src/llm/: __init__.py  circuit_breaker.py  claude_llm.py  config.py  llm_factory.py
src/tasks/: __init__.py  compliance_check_task.py  guide_application_task.py  intake_task.py  lawyer_match_task.py  research_immigration_task.py  response_task.py  simplify_language_task.py
src/tools/: __init__.py  database_interface.py  database_tools.py  immigration_tools.py  logging_tools.py  mock_database.py  web_tools.py
tests/: __init__.py  conftest.py  test_matrix.py
tests/integration/: test_agent_system.py  test_api.py
tests/unit/: test_agents.py  test_tasks.py  test_tools.py
